# imblur

./: .clang-format  .gitignore  .gitignore.orig  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  Dockerfile  ImageManipulator.cpp  ImageManipulator.hpp  LICENSE  README.md  README.md.orig  main.cpp  project-workspace.code-workspace  project-workspace.code-workspace.orig  screen-lock
.github/: labeler.yml
.github/actions/docker-build-develop/: actions.yml
.github/workflows/: build-docs.yml  ci-script.yml
cmake/modules/: FindClangFormat.cmake
doc/: Goals.md
formatbackup-07-02-2020--20:35/src/: main.cpp
scripts/: publish-to-public.sh  publish-to-public.sh.orig  screen-lock  screen-lock.orig  test-script.sh  test-script.sh.orig
src/: ImageData.cpp  main.cpp  main.cpp.orig
